20030628
 - (djm) Bug #591: use PKCS#15 private key label as a comment in case 
   of OpenSC. Report and patch from larsch@trustcenter.de
 - (djm) Bug #593: Sanity check OpenSC card reader number; patch from 
   aj@dungeon.inka.de
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/06/23 09:02:44
     [ssh_config.5]
     document EnableSSHKeysign; bugzilla #599; ok deraadt@, jmc@
   - markus@cvs.openbsd.org 2003/06/24 08:23:46
     [auth2-hostbased.c auth2-pubkey.c auth2.c channels.c key.c key.h
      monitor.c packet.c packet.h serverloop.c sshconnect2.c sshd.c]
     int -> u_int; ok djm@, deraadt@, mouring@
   - miod@cvs.openbsd.org 2003/06/25 22:39:36
     [sftp-server.c]
     Typo police: attribute is better written with an 'r'.
   - markus@cvs.openbsd.org 2003/06/26 20:08:33
     [readconf.c]
     do not dump core for 'ssh -o proxycommand host'; ok deraadt@
 - (dtucker) [regress/dynamic-forward.sh] Import new regression test.
 - (dtucker) [configure.ac] Bug #570: Have ./configure --enable-FEATURE 
   actually enable the feature, for those normally disabled.  Patch by
   openssh (at) roumenpetrov.info.

20030624
 - (dtucker) Have configure refer the user to config.log and
   contrib/findssl.sh for OpenSSL header/library mismatches.

20030622
 - (dtucker) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2003/06/21 09:14:05
     [regress/reconfigure.sh]
     missing $SUDO; from dtucker@zip.com.au
   - markus@cvs.openbsd.org 2003/06/18 11:28:11
     [ssh-rsa.c]
     backout last change, since it violates pkcs#1
     switch to share/misc/license.template
   - djm@cvs.openbsd.org 2003/06/20 05:47:58
     [sshd_config.5]
     sync description of protocol 2 cipher proposal; ok markus
   - djm@cvs.openbsd.org 2003/06/20 05:48:21
     [sshd_config]
     sync some implemented options; ok markus@
 - (dtucker) [regress/authorized_keys_root] Remove temp data file from CVS.
 - (dtucker) [openbsd-compat/setproctitle.c] Ensure SPT_TYPE is defined before